# SpoonyWaves

./: .gitignore  LICENSE  README.md  build_all.bat  diagnostics.py  pyproject.toml  spoonywaves.spec  spoonywaves_cli.py
.github/workflows/: build-and-release.yml  build-test.yml
installer/: InnoSetupScript.iss  License.rtf  README.txt
src/: __init__.py  main.py  wavyfier.py
